Fixed material design checkbox colors, Disabled all tooltips on mobile devices.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+// @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 $primary-color: #ffbc00;
 $primary-color-hover: #23272B;
@@ -116,10 +117,10 @@ h1, h2, h3 {
 }  
 
 //Styling angular material checkbox 
-.mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-  background-color: $primary-color !important;
-}
+// .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+//   background-color: $primary-color !important;
+// }
 
-.mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element {
-  background: #ffbb0054 !important;
-}
+// .mat-checkbox-ripple .mat-ripple-element {
+//   background: #ffbb0054 !important;
+// }
